--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: yellow;">
 	<head>
+	<meta charset="UTF-8">
 		<Title>Introduction</Title>
 	</head>
+	<body style="margin:20px;">
+	<h1 style="border-style: dotted; text-align: center; color: tomato; padding: 10px;"> Hello!!!!!! </h1>
 
-	<body>
-		<h1><b>Hello Hello Hello Hi Hi Hi Hi WOoaowdkoakdsokodakoskd</b></h1>
-
-		<h2>The name's Ben</h2>
+		<h2 style="color:purple;">The name's Ben</h2>
 		
 		<p>I'm gonna tell you guys a little about myself
 		<br>I'm about to be a 7th grader in SIS Kelapa Gading
-		<br>Still 11 years old, but turning 12 on july 30<sup>th</sup></p>
+		<br>Still 11 years old, but turning 12 on july 30<sup>th</sup> &#128525</p>
 		<p>Hobbies are gaming and some sports like volleyball or running
 		<br>Favorite food? Probably fried chicken, or soup, pretty tasty
 		<br><img src="https://asset.kompas.com/crops/3Xop3ar79dpxyp2cxOI-xoM0_x8=/62x0:906x563/750x500/data/photo/2020/09/28/5f71809b46054.jpg" height="200" width="300"></p>
-		<p>Now uhhhh that's really all I'll introduce about myself so uhh bye bye and stay <b><i>safe</i></b>, especially in this pandemic hsadgasgdhgh</p>
+		<p>Now uhhhh that's really all I'll introduce about myself so uhh bye bye and stay <b><i>safe</i></b>, especially in this pandemic</p>
 		<br>
 		<br>
 		<br>
-		<p>fart</p>
+		<p><a href="https://youtu.be/Qi1KebO4bzc">fart<a/></p>
+	</body>
+	</html>
